<resources>
    <string name="app_name" translatable="false">Dinamik Beyin</string>
    <string name="button_next">İleri</string>
    <string name="button_skip">Atla</string>
    <string name="button_login">Giriş Yap</string>
    <string name="button_register">Üye Ol</string>
    <string name="button_yes">Evet</string>
    <string name="button_no">Hayır</string>
    <string name="button_back_to_start">Başa Dön</string>
    <string name="button_support">Bizimle İletişime Geçin</string>
    <string name="button_back" translatable="false">&lt;</string>
    <string name="button_confirm">Onayla</string>
    <string name="button_save_pass">Şifreni Güncelle</string>
    <string name="button_back_to_login">Giriş Ekranına Dön</string>
    <string name="button_space">Boşluk</string>
    <string name="button_retry">Yeniden Dene</string>
    <string name="button_close_app">Uygulamayı Kapat</string>
    <string name="button_exams">Sınavlar</string>
    <string name="button_exam_start">Sınava Başla</string>
    <string name="button_exam_back">Daha Sonra Tamamla</string>
    <string name="button_exam_answer">Cevapla</string>
    <string name="button_launch">Lansman Modu</string>
    <string name="permission_allow">İzin Ver</string>
    <string name="permission_deny">Şimdilik Reddet</string>
    <string name="warning">UYARI !</string>
    <string name="wifiFailure">Lütfen internet bağlantınızı kontrol edin!</string>
    <string name="wifiFailureDesc">İnternet bağlantınız olmadığı için uygulamaya erişim sağlayamıyorsunuz.\nLütfen bağlantınızı kontrol edip yeniden deneyin.</string>
    <string name="onboard_1_headline">Zihninizin Gücünü Keşfedin</string>
    <string name="onboard_1_desc">Gelişmiş nörostimülasyon teknolojimizle bilişsel fonksiyonlarınızı artırma yolculuğuna başlayın.</string>
    <string name="onboard_2_headline">Kolay Kurulum</string>
    <string name="onboard_2_desc">Cihazınızı Bluetooth ile eşleştirmek için basit adımları izleyin ve başlamaya hazır olun.</string>
    <string name="onboard_3_headline">İlk Seansınıza Başlayın</string>
    <string name="onboard_3_desc">İlk seansınıza başlamak ve zihninizin potansiyelini açığa çıkarmak için dokunun.</string>
    <string name="first_setup_q1">12 Yaşının üstünde misiniz?</string>
    <string name="first_setup_q2">Kalp pili kullanıyor musunuz?</string>
    <string name="first_setup_q3">Beyin pili kullanıyor musunuz?</string>
    <string name="first_setup_error_headline">Maalesef Sürece \nDevam Edemiyoruz…</string>
    <string name="first_setup_error_desc">Cihazı kullanabilmek için herhangi bir kalp pili ve/veya beyin pili kullanmıyor olmanız gerekmektedir.</string>
    <string name="login_headline_desc">Dünyasına Tekrardan Hoşgeldin</string>
    <string name="login_personal_id">T.C. Kimlik Numaranız</string>
    <string name="login_personal_pass">Şifre</string>
    <string name="login_forget_pass">Şifrenizi mi unuttunuz?</string>
    <string name="login_register_first">Henüz hesabınız yok mu?</string>
    <string name="register_first_header">Kişisel Bilgiler</string>
    <string name="register_first_desc">Lütfen cihazı kullanacak olan kişinin\nbilgilerini giriniz.</string>
    <string name="register_name">İsim</string>
    <string name="register_surname">Soyisim</string>
    <string name="register_birth_date">Doğum Tarihi</string>
    <string name="register_phone_number">Telefon</string>
    <string name="register_email">E-Posta Adresi</string>
    <string name="register_repeat_pass">Tekrar Şifrenizi Girin</string>
    <string name="register_terms_and_conditions">Üyelik Sözleşmesini, Gizlilik Politikasını ve Cihaz Kullanım Şartlarını onaylıyorum.</string>
    <string name="register_first_select_date">Doğum Tarihinizi Seçin</string>
    <string name="register_first_done">Tamam</string>
    <string name="register_no_email">E-Postam Yok</string>
    <string name="register_second_header">Adres Bilgileri</string>
    <string name="register_second_desc">Platforma erişim şifrenizi belirledikten sonra\nkargo bilgilerinizi girmelisiniz.</string>
    <string name="register_address_name">Adres Adı</string>
    <string name="register_address_city">Şehir</string>
    <string name="register_address_district">İlçe</string>
    <string name="register_address_neighborhood">Mahalle</string>
    <string name="register_zip_code">Posta Kodu</string>
    <string name="register_address_detail">Adres Detayı</string>
    <string name="register_address_confirm">Verdiğim adresin doğru olduğunu teyit ediyorum.</string>
    <string name="register_thirth_header">Üyelik Planı</string>
    <string name="register_thirth_desc">Size uygun üyelik seçeneklerinden biri ile\ndevam edebilirsiniz.</string>
    <string name="register_thirth_plan_1">Obezite</string>
    <string name="register_thirth_plan_2">Alzheimer</string>
    <string name="register_thirth_plan_3">Sınava Hazırlık</string>
    <string name="register_thirth_terms">Ön Bilgilendirme Formunu okudum, Mesafeli Satış Sözleşmesini kabul ediyorum.</string>
    <string name="register_thirth_warning">Abonelik süreciniz cihaz elinize ulaştıktan sonra başlar.</string>
    <string name="register_card_number">Kart Numarası</string>
    <string name="register_card_name">Kart Üzerindeki isim</string>
    <string name="register_card_date">Ay / Yıl</string>
    <string name="register_card_cvv">CVV</string>
    <string name="register_card_security">Kredi Kartı Bilgileriniz 128 Bit SSL ile Korunur.</string>
    <string name="register_card_options">Taksit Seçenekleri</string>
    <string name="register_thirth_select_expiry_date">Son Kullanma Tarihi</string>
    <string name="plan_1_price" translatable="false">170,00 ₺</string>
    <string name="plan_2_price" translatable="false">1.020,00 ₺</string>
    <string name="plan_3_price" translatable="false">1.990,00 ₺</string>
    <string name="plan_1_summary">Obezite Paketi</string>
    <string name="plan_2_summary">Alzheimer Paketi</string>
    <string name="plan_3_summary">Sınava Hazırlık Paketi</string>
    <string name="plan_1_gift">10 Gün Hediye</string>
    <string name="plan_1_spec_1">Taahhüt Yok Dilediğin Zaman İptal Et</string>
    <string name="plan_1_spec_2">12 Taksite Bölünür</string>
    <string name="plan_1_spec_3">Yıllık Olarak Kesilir</string>
    <string name="plan_2_gift">15 Gün Hediye</string>
    <string name="plan_2_spec_1">Taahhüt Yok Dilediğin Zaman İptal Et</string>
    <string name="plan_2_spec_2">12 Taksite Bölünür</string>
    <string name="plan_2_spec_3">Yıllık Olarak Kesilir</string>
    <string name="plan_3_gift">1 Ay Hediye</string>
    <string name="plan_3_spec_1">Taahhüt Yok Dilediğin Zaman İptal Et</string>
    <string name="plan_3_spec_2">12 Taksite Bölünür</string>
    <string name="plan_3_spec_3">Yıllık Olarak Kesilir</string>
    <string name="cargo_title">Hazırlanıyor...</string>
    <string name="cargo_description">Siparişinizi özenle hazırlıyoruz.</string>
    <string name="error_title">Hata !</string>
    <string name="error_term_confirm">Sözleşmeleri onaylamalısınız.</string>
    <string name="error_fill_blanks">Lütfen tüm alanları doldurun.</string>
    <string name="error_age_error">12 yaşından küçükler için abonelik planı seçilemez.</string>
    <string name="error_select_city_first">Lütfen önce ilinizi seçin.</string>
    <string name="error_select_city_district_first">Lütfen önce ilcenizi seçin.</string>
    <string name="error_empty_fields">Tüm alanları doldurmalısınız.</string>
    <string name="error_invalid_id_number">TC Kimlik numaranız 11 karakterden fazla ya da az olamaz.</string>
    <string name="error_login_failed">Giriş yaparken hata meydana geldi lütfen tekrar deneyin.</string>
    <string name="locationPermError">Konum izni gereklidir. Lütfen uygulamayı yeniden başlatın.</string>
    <string name="get_exams_error">Sınav verilerinize ulaşılamadı. Lütfen ekranı yenileyin.</string>
    <string name="exam_detail_cant_retrieve">Sınav detayları alınamadı.</string>
    <string name="not_permitted">Programı kullanmak için gerekli şartları karşılamıyorsunuz.</string>
    <string name="error_register_not_complete">Kayıtlanma tamamlanamadı lütfen tekrar deneyin.</string>
    <string name="error_payment_not_complete">Ödeme işlemi tamamlanamadı lütfen tekrar deneyin.</string>
    <string name="error_package_list">Abonelikler alınamadı !</string>
    <string name="error_turkish_number_format">Telefon numarası 5XX XXX XX XX formatında olmalı.</string>
    <string name="error_profile_retrieve">Profil bilgisi alınamadı.</string>
    <string name="error_invalid_email">E-Posta adresi xxxx@xx.com formatında olmalıdır.</string>
    <string name="error_address_cant_create">Adres oluşturulamadı. Lütfen tekrar deneyin.</string>
    <string name="error_register_format">Lütfen doldurmanız gereken alanları kontrol edin.</string>
    <string name="register_fourth_success">Aboneliğiniz Başarıyla Alındı!</string>
    <string name="register_fourth_shipment">Kargo Bilgileri Önizleme</string>
    <string name="register_fourth_plan_name">Abonelik İsmi</string>
    <string name="register_fourth_order_type">Sipariş Türü</string>
    <string name="register_fourth_plan_price">Fiyat</string>
    <string name="register_fourth_address">Kargo Adresi</string>
    <string name="register_fourth_order_id">Sipariş Numarası</string>
    <string name="three_d_secure" translatable="false">3D Secure</string>
    <string name="payment_options_type">Ödeme Şekli</string>
    <string name="payment_options_total_price">Toplam Tutarı</string>
    <string name="payment_options_advance">Peşin</string>
    <string name="payment_options_two_month_advance">2 Taksit</string>
    <string name="payment_options_four_month_advance">4 Taksit</string>
    <string name="payment_options_eight_month_advance">8 Taksit</string>
    <string name="payment_options_annual_advance">12 Taksit</string>
    <string name="reset_enter_phone">Telefonunuzu Giriniz</string>
    <string name="reset_enter_phone_desc">Şifrenizi sıfırlamak için kayıtlı telefon numaranızı girin ve “İleri” butonuna tıklayın.</string>
    <string name="reset_pass_support">Yardım mı gerekiyor?</string>
    <string name="reset_pass_contact"><u>Destek Ekibiyle İletişime Geçin</u></string>
    <string name="reset_otp_code">Doğrulama Kodu</string>
    <string name="reset_otp_code_desc">Şifrenizi sıfırlayabilmeniz için telefon numaranıza 6 haneli bir kod gönderdik. Lütfen aşağıdaki alana kodu giriniz.</string>
    <string name="reset_new_pass">Yeni Platform Erişim Şifresi</string>
    <string name="reset_new_pass_desc">Platforma erişmek için yeni şifrenizi aşağıdaki alanlara girişiniz yapınız.</string>
    <string name="reset_password_created">Şifreniz Oluşturuldu</string>
    <string name="reset_password_created_desc">Yeni şifreniz ile platforma erişim sağlayabilirsiniz.</string>
    <string name="dashboard_instructure">Kullanım Talimatı</string>
    <string name="dashboard_instructure_desc">Haftada 5 Gün kullanmanız öneriliyor.</string>
    <string name="add_device">Cihaz Ekleyin</string>
    <string name="game_header">Sayısal Hafıza Oyunu</string>
    <string name="game_desc">Yeni Test butonuna tıklayınız ve ekranda görüntülenen sayıları aklınızda tutunuz. </string>
    <string name="game_slow">Yavaş</string>
    <string name="exam_info">Sınav Bilgilendirmesi</string>
    <string name="exam_hello">Merhaba !</string>
    <string name="exam_detail">Bu sınav, elektro dalgaları ile hafıza ve zihinsel gelişimi takip etmenize yardımcı olmak için tasarlanmıştır.</string>
    <string name="exam_instructions_1">Beş farklı bellek kategorisinden oluşan bir hafıza testi içerir.</string>
    <string name="exam_instructions_2">Test sonuçları grafikler ve tablolar ile görselleştirilir.</string>
    <string name="exam_instructions_3">Geçmiş performansınızı takip edebilirsiniz.</string>
    <string name="exam_instructions_4">Hafıza ve zihinsel gelişimi geliştirmeye yönelik tavsiyeler sunar.</string>
</resources>