<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center">

    <TextView
        android:id="@+id/textViewError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wifiFailureDesc"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        android:fontFamily="@font/roboto_flex"
        android:gravity="center"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/buttonRetry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_retry"
        android:background="@drawable/button_fs_yes"
        android:textColor="@color/white"
        android:fontFamily="@font/roboto_flex"
        android:textAllCaps="false"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/buttonClose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_close_app"
        android:background="@drawable/button_fs_no"
        android:textColor="@color/black"
        android:fontFamily="@font/roboto_flex"
        android:textAllCaps="false"
        android:layout_marginTop="8dp" />
</LinearLayout>