<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightBaseColor"
    android:padding="16dp"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/background_exams_recycler"
        android:padding="16dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/logo_app_black"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/lightBaseColor"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="22dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:gravity="center">
                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginRight="6dp"
                    android:src="@drawable/ikon_bubbles"
                    app:tint="@color/ratingColor"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/exam_info"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/ratingColor"
                    android:fontFamily="@font/roboto_flex"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="14dp"
                android:layout_marginBottom="18dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/exam_hello"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:fontFamily="@font/roboto_flex"
                    android:textColor="@color/darkBaseColor"
                    android:layout_marginBottom="4dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/exam_detail"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:fontFamily="@font/roboto_flex"
                    android:textColor="@color/darkBaseColor"
                    android:layout_marginBottom="4dp"/>
            </LinearLayout>

            <View
                android:layout_width="100dp"
                android:layout_height="1dp"
                android:background="@color/lightBaseColor"
                android:layout_marginTop="16dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_gravity="center"
                android:layout_marginBottom="18dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:padding="16dp">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="12dp">
                    <ImageView
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:src="@drawable/ikon_exam_instructions_1"
                        app:tint="@color/ratingColor"
                        android:layout_gravity="center"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/exam_instructions_1"
                        android:textColor="@color/darkBaseColor"
                        android:textSize="12sp"
                        android:layout_marginStart="4dp"
                        android:layout_gravity="center"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="12dp">
                    <ImageView
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:src="@drawable/ikon_exam_instructions_2"
                        app:tint="@color/ratingColor"
                        android:layout_gravity="center"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/exam_instructions_2"
                        android:textColor="@color/darkBaseColor"
                        android:textSize="12sp"
                        android:layout_marginStart="4dp"
                        android:layout_gravity="center"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="12dp">
                    <ImageView
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:src="@drawable/ikon_exam_instructions_3"
                        app:tint="@color/ratingColor"
                        android:layout_gravity="center"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/exam_instructions_3"
                        android:textColor="@color/darkBaseColor"
                        android:textSize="12sp"
                        android:layout_marginStart="4dp"
                        android:layout_gravity="center"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="12dp">
                    <ImageView
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:src="@drawable/ikon_exam_instructions_4"
                        app:tint="@color/ratingColor"
                        android:layout_gravity="center"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/exam_instructions_4"
                        android:textColor="@color/darkBaseColor"
                        android:textSize="12sp"
                        android:layout_marginStart="4dp"
                        android:layout_gravity="center"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">
            <Button
                android:id="@+id/startButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_next_2"
                android:text="@string/button_exam_start"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"/>
            <Button
                android:id="@+id/backButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_exam_back"
                android:textColor="@color/darkBaseColor"
                android:background="@drawable/button_fs_no"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginBottom="16dp"/>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>