<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/image_dashboard_cardview"
    android:fitsSystemWindows="true"
    tools:context=".SplashActivity">

    <ImageView
        android:id="@+id/appLogo"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:src="@drawable/logo_splash"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/onboardIcon"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:src="@drawable/ikon_head"
        app:layout_constraintTop_toBottomOf="@+id/appLogo"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/onboardIcon">

        <me.t3sl4.upcortex.UI.Components.CircleStepper.CircleStepper
            android:id="@+id/customStepView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:stepSize="3"
            app:currentStep="2"
            app:fill="false"
            app:circleColor="@color/ratingColor"
            app:circleSize="6dp"
            app:borderSize="3dp"
            android:layout_gravity="center"
            app:padding="6dp"
            app:pager="true"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/onboard_3_headline"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="24sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/onboard_3_desc"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:layout_marginTop="6dp"
            android:textSize="18sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.25"
        android:orientation="vertical"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.0"
            android:layout_gravity="center"
            android:background="@drawable/button_next"
            android:layout_marginTop="16dp"
            android:padding="16dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="8dp"
            android:text="@string/button_login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="bold"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.0"
            android:layout_gravity="center"
            android:background="@drawable/button_skip"
            android:padding="16dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="8dp"
            android:text="@string/button_skip"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:visibility="invisible"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
